[project]
name = "shortlink-main"
version = "0.1.0"
description = ""
authors = [
    {name = "DeveloperDreamer",email = "say284821@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.13.2,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "alembic (>=1.18.4,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "redis (>=7.4.0,<8.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]

[tool.poetry]
packages = [{include = "shortlink_main", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
